Metidos productos en index y en el slider, por pulir mucho.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -26,4 +26,8 @@
         <error-code>404</error-code>
         <location>/JSP/ERRORES/error404.jsp</location>
     </error-page>
+    
+    <listener>
+        <listener-class>es.albarregas.eventos.Inicializar</listener-class>
+    </listener> 
 </web-app>
