--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>gson</artifactId>
             <version>2.7</version>
         </dependency>
- 
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency> 
     </dependencies>
 
     <build>
